--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="og:image" content="doge.jpg">
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
-    <link href="https://raw.githubusercontent.com/Skyonite/Vtuberjsontest/master/style.css" rel="stylesheet">
+    <link href="htthttps://github.com/Skyonite/staticwebsitetest.github.io/blob/master/style.css" rel="stylesheet">
     <meta name="og:type" content="website">
-    <script type="text/javascript" src="https://raw.githubusercontent.com/Skyonite/Vtuberjsontest/master/javacode.js" defer></script>
+    <script type="text/javascript" src="https://github.com/Skyonite/staticwebsitetest.github.io/blob/master/javacode.js" defer></script>
     <script>window.twttr = (function(d, s, id) {
         let js, fjs = d.getElementsByTagName(s)[0],
             t = window.twttr || {};
