--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="og:image" content="doge.jpg">
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
-    <link href="https://raw.githubusercontent.com/Skyonite/Vtuberjsontest/master/style.css" rel="stylesheet" type="text/plain">
+    <link href="https://raw.githubusercontent.com/Skyonite/Vtuberjsontest/master/style.css" rel="stylesheet" type="text/css">
     <meta name="og:type" content="website">
     <script type="text/javascript" src="https://raw.githubusercontent.com/Skyonite/staticwebsitetest.github.io/master/javacode.js" defer></script>
     <script>window.twttr = (function(d, s, id) {
