--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
     <link href="https://raw.githubusercontent.com/Skyonite/Vtuberjsontest/master/style.css" rel="stylesheet">
     <meta name="og:type" content="website">
-    <script type="text/javascript" src="https://files.catbox.moe/cgzz7s.js" defer></script>
+    <script type="text/javascript" src="https://files.catbox.moe/0uulou.js" defer></script>
     <script>window.twttr = (function(d, s, id) {
         let js, fjs = d.getElementsByTagName(s)[0],
             t = window.twttr || {};
