--- a/index.html
+++ b/index.html
@@ -483,6 +483,7 @@
 
         <div class="add-vtubers-label">
             <span> Add Virtual Youtuber </span>
+            <br> <span style="font-size:0.7em;"> click to swap between vtubers you idiot</span>
         </div>
 
         <div class="search-box-div">
